--- a/AndrioMobileApp/register.html
+++ b/AndrioMobileApp/register.html
@@ -14,13 +14,14 @@
             font-family: 'Poppins', sans-serif;
         }
 
-        body {
-            background: linear-gradient(to right, #50C9C3, #4A90E2);
+           body {
+            background: linear-gradient(to right, #6A11CB, #2575FC);
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
-        }
+    }
+
 
         .register-container {
             background: white;
