--- a/Votepage.html
+++ b/Votepage.html
@@ -29,16 +29,25 @@
         h2 {
             font-size: 2em;
         }
+        h3 {
+            font-size: 1.5em;
+            margin-bottom: 30px;
+            color: #333;
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <h2>Live Voting Results</h2>
+        <h3 id="questionText">Loading question...</h3> <!-- Display questions -->
         <canvas id="voteChart"></canvas>
     </div>
+
     <script>
         const socket = io('http://localhost:3000');
         const ctx = document.getElementById("voteChart").getContext("2d");
+
+        // Set up chart data
         let voteData = {
             labels: ["A", "B", "C"],
             datasets: [{
@@ -47,6 +56,8 @@
                 backgroundColor: ["#4CAF50", "#FF5733", "#3498DB"],
             }]
         };
+
+        // Create the chart
         let voteChart = new Chart(ctx, {
             type: "bar",
             data: voteData,
@@ -68,9 +79,15 @@
             }
         });
 
-        socket.on('updateVotes', (votes) => {
-            voteChart.data.datasets[0].data = [votes.A, votes.B, votes.C];
+        // Listen for updates from server
+        socket.on('updateVotes', (data) => {
+            voteChart.data.datasets[0].data = [data.votes.A, data.votes.B, data.votes.C];
             voteChart.update();
+
+            // Update the question
+            if (data.question) {
+                document.getElementById("questionText").textContent = data.question;
+            }
         });
     </script>
 </body>
