Updated version. MainActivity went to app java

--- a/androidMobileApp/login.html
+++ b/androidMobileApp/login.html
@@ -96,7 +96,7 @@
 
 <div class="login-container">
     <h2>Login to Vote</h2>
-    <form id="loginForm" form method="get" action="http://localhost:9999/ebookshop/login">
+    <form id="loginForm" form method="get" action="http://localhost:9999/androidMobileApp/login">
         <div class="input-group">
             <label for="username">Username</label>
             <input type="text" id="username" name="username" required>
