--- a/androidMobileApp/register.html
+++ b/androidMobileApp/register.html
@@ -97,7 +97,7 @@
 
 <div class="register-container">
     <h2>Create an Account</h2>
-    <form id="registerForm" form method="get" action="http://localhost:9999/androidMobileApp/register">
+    <form id="registerForm" form method="get" action="/androidMobileApp/register">
         <div class="input-group">
             <label for="username">Username</label>
             <input type="text" id="username" name="username" required>
