--- a/androidMobileApp/Votingpin.html
+++ b/androidMobileApp/Votingpin.html
@@ -4,6 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Generate Pin</title>
+    <style>
+        body
+        {
+            font-family: Arial, sans-serif;
+            background: #f2f6fc;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            margin: 0;
+        }
+
+        button
+        {
+            padding: 12px 24px;
+            font-size: 16px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            transition: background-color 0.3s ease;
+        }
+
+        button:hover {
+            background-color: #0056b3;
+        }
+
+        #pinDisplay {
+            margin-top: 20px;
+            font-size: 22px;
+            color: #333;
+            padding: 12px 24px;
+            background: #ffffff;
+            border-radius: 10px;
+            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+        }
+    </style>
 </head>
 <body>
 <button onclick="generatePin()">Generate Pin</button>
